floating Navbar Completed & need to work on corrections on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@
   
   section {
     margin: 8rem;
+    height: 100vh;
   }
   
   section > h2,
